--- a/index.html
+++ b/index.html
@@ -3,8 +3,66 @@
   <head>
     <meta charset="utf-8">
     <title>Album Covers</title>
+      <link href="index.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <h1>Alben</h1>
+    <div class="pagecontent">
+        <h1>Alben <input id="search" type="text" placeholder="Search"/></h1>
+        <div class="line"></div>
+        <div>
+            <div class=”image-wraper”>
+                <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
+            </div>
+            <div class="text-wraper">
+                <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
+                <ol>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                </ol>
+            </div>
+            <div class="clear"></div>
+            <div class="line light"></div>
+        </div>
+        <div>
+            <div class=”image-wraper”>
+                <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
+            </div>
+            <div class="text-wraper">
+                <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
+                <ol>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                </ol>
+            </div>
+            <div class="clear"></div>
+            <div class="line light"></div>
+        </div>
+        <div>
+            <div class=”image-wraper”>
+                <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
+            </div>
+            <div class="text-wraper">
+                <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
+                <ol>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                    <li>She Has Funny Cars</li>
+                </ol>
+            </div>
+            <div class="clear"></div>
+            <div class="line light"></div>
+        </div>
+      </div>
   </body>
 </html>
