--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Album Covers</title>
-      <link href="index.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="index.css" media="screen" rel="stylesheet" type="text/css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"
+	integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+	crossorigin="anonymous">
+    </script>
+    <script src="index.js"></script>
   </head>
   <body>
     <div class="pagecontent">
