--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		
         <div class="pagecontent">
-            <h1>Alben</h1>
+            <h1>Alben <input id="search" type="text" placeholder="Search"/></h1>
             <div class="line"></div>
             <div>
                 <div class=”image-wraper”>
