--- a/index.html
+++ b/index.html
@@ -69,6 +69,30 @@
                 <div class="clear"></div>
                 <div class="line light"></div>
             </div>
+		
+		 <div class="album">
+	            <div class="image-wraper">
+	                <img class="cover-image" src="http://upload.wikimedia.org/wikipedia/en/a/a1/Nirvana-Bleach.jpg"/>
+	            </div>
+	            <div class="text-wraper">
+	                <h2><b>Nirvana</b> Bleach</h2>
+	                <ol>
+	                    <li>Blew</li>
+	                    <li>Floyd the Barber</li>
+	                    <li>About a Girl</li>
+	                    <li>School</li>
+	                    <li>Love Buzz</li>
+	                    <li>Paper Cuts</li>
+	                    <li>Negative Creep</li>
+	                    <li>Scoff</li>
+	                    <li>Swap Meet</li>
+	                    <li>Mr. Moustache</li>
+	                    <li>Sifting</li>
+	                </ol>
+	            </div>
+	            <div class="clear"></div>
+	            <div class="line light"></div>
+	        </div>
         </div>
 	</body>
 </html>
