--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="line light"></div>
             </div>
 		
-		 <div class="album">
+		 <div>
 	            <div class="image-wraper">
 	                <img class="cover-image" src="http://upload.wikimedia.org/wikipedia/en/a/a1/Nirvana-Bleach.jpg"/>
 	            </div>
