--- a/index.html
+++ b/index.html
@@ -15,84 +15,30 @@
         <div class="pagecontent">
             <h1>Alben <input id="search" type="text" placeholder="Search"/></h1>
             <div class="line"></div>
-            <div>
-                <div class=”image-wraper”>
-                    <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
-                </div>
-                <div class="text-wraper">
-                    <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
-                    <ol>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                    </ol>
-                </div>
-                <div class="clear"></div>
-                <div class="line light"></div>
-            </div>
-            <div>
-                <div class=”image-wraper”>
-                    <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
-                </div>
-                <div class="text-wraper">
-                    <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
-                    <ol>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                    </ol>
-                </div>
-                <div class="clear"></div>
-                <div class="line light"></div>
-            </div>
-            <div>
-                <div class=”image-wraper”>
-                    <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
-                </div>
-                <div class="text-wraper">
-                    <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
-                    <ol>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                        <li>She Has Funny Cars</li>
-                    </ol>
-                </div>
-                <div class="clear"></div>
-                <div class="line light"></div>
-            </div>
-		
-		 <div>
-	            <div class="image-wraper">
-	                <img class="cover-image" src="http://upload.wikimedia.org/wikipedia/en/a/a1/Nirvana-Bleach.jpg"/>
-	            </div>
-	            <div class="text-wraper">
-	                <h2><b>Nirvana</b> Bleach</h2>
-	                <ol>
-	                    <li>Blew</li>
-	                    <li>Floyd the Barber</li>
-	                    <li>About a Girl</li>
-	                    <li>School</li>
-	                    <li>Love Buzz</li>
-	                    <li>Paper Cuts</li>
-	                    <li>Negative Creep</li>
-	                    <li>Scoff</li>
-	                    <li>Swap Meet</li>
-	                    <li>Mr. Moustache</li>
-	                    <li>Sifting</li>
-	                </ol>
-	            </div>
-	            <div class="clear"></div>
-	            <div class="line light"></div>
-	        </div>
+            <body>
+		<div>
+			<div class="image-wraper">
+				<img class="cover-image" 									src="http://upload.wikimedia.org/wikipedia/en/a/a1/Nirvana-				Bleach.jpg"/>
+			</div>
+			<div class="text-wraper">
+				<h2><b>Nirvana</b> Bleach</h2>
+				<ol>
+					<li>Blew</li>
+					<li>Floyd the Barber</li>
+					<li>About a Girl</li>
+					<li>School</li>
+					<li>Love Buzz</li>
+					<li>Paper Cuts</li>
+					<li>Negative Creep</li>
+					<li>Scoff</li>
+					<li>Swap Meet</li>
+					<li>Mr. Moustache</li>
+					<li>Sifting</li>
+				</ol>
+			</div>
+			<div class="clear"></div>
+			<div class="line light"></div>
+		</div>
         </div>
 	</body>
 </html>
