--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
         <div class="pagecontent">
             <h1>Alben <input id="search" type="text" placeholder="Search"/></h1>
             <div class="line"></div>
-            <body>
+		     <div>
+	            <div class="image-wraper">
+	                <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
+	            </div>
+	            <div class="text-wraper">
+	                <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
+	                <ol>
+	                    <li>She Has Funny Cars</li>
+	                    <li>Somebody to Love</li>
+	                    <li>My Best Friend</li>
+	                    <li>Today</li>
+	                    <li>Comin' Back to Me</li>
+	                    <li>3/5 of a Mile in 10 Seconds</li>
+	                    <li>D.C.B.A.–25</li>
+	                    <li>How Do You Feel</li>
+	                    <li>Embryonic Journey</li>
+	                    <li>White Rabbit</li>
+	                    <li>Plastic Fantastic Lover</li>
+	                </ol>
+	            </div>
+	            <div class="clear"></div>
+	            <div class="line light"></div>
+	        </div>
 		<div>
 			<div class="image-wraper">
 				<img class="cover-image" 									src="http://upload.wikimedia.org/wikipedia/en/a/a1/Nirvana-				Bleach.jpg"/>
